--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <link rel="stylesheet" href="./styles/fonts.css" />
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/styles.min.css" />
+    <!-- <link rel="stylesheet" href="./styles/normalize.css" /> -->
+    <!-- <link rel="stylesheet" href="./styles/style.css" /> -->
 
     <title>Photography</title>
   </head>
