--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <link rel="stylesheet" href="./styles/fonts.css" />
-    <link rel="stylesheet" href="./styles/styles.min.css" />
-    <!-- <link rel="stylesheet" href="./styles/normalize.css" /> -->
-    <!-- <link rel="stylesheet" href="./styles/style.css" /> -->
+    <!-- <link rel="stylesheet" href="./styles/styles.min.css" /> -->
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
 
     <title>Photography</title>
   </head>
@@ -95,6 +95,56 @@
 
           <button class="consultation pink">Free Consultation</button>
         </div>
+      </div>
+
+      <section class="work">
+        <div class="container work-container">
+          <h2 class="work-title">My Work</h2>
+          <ul class="work-images">
+            <li class="work-item">
+              <img class="work-image" src="./images/work-1.jpg" alt="solid" />
+            </li>
+
+            <li class="work-item">
+              <img class="work-image" src="./images/work-2.jpg" alt="solid" />
+            </li>
+
+            <li class="work-item">
+              <img class="work-image" src="./images/work-3.jpg" alt="solid" />
+            </li>
+
+            <li class="work-item">
+              <img class="work-image" src="./images/work-4.jpg" alt="solid" />
+            </li>
+
+            <li class="work-item">
+              <img class="work-image" src="./images/work-5.jpg" alt="solid" />
+            </li>
+          </ul>
+
+          <div class="work-actions">
+            <button class="work-actions-btn">
+              <img class="work-action-arrow" src="./images/arrow-left.svg"
+              aria-hidden="true""">
+            </button>
+            <button class="work-actions-btn workright">
+              <img class="work-action-arrow" src="./images/arrow-right.svg"
+              aria-hidden="true""">
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <div class="container cto-container">
+        <div class="cto-items">
+          <h2 class="cto-title">Book a call with me</h2>
+          <p class="cto-text">
+            I’d love to have a chat to see how I can help you. The best first
+            step is for us to discuss your project during a free consultation.
+            Then we can move forward from there.
+          </p>
+        </div>
+        <button class="cto-btn consultation pink">Free Consultation</button>
       </div>
     </main>
 
